# prbar

./: .gitignore  .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  requirements.md  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: bump-build-and-tag.yml  ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: generate-icons.mjs
apps/desktop/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  main.tsx  store.test.ts  store.ts  styles.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  crypto.rs  db.rs  engine.rs  github.rs  lib.rs  logging.rs  main.rs  models.rs  poller.rs  secrets.rs  tray.rs
