[package]
name = "prbar"
version = "0.1.0"
description = "PRBar - menu bar / system tray GitHub pull request monitor"
authors = ["PRBar"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "prbar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
thiserror = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
